[gd_scene load_steps=6 format=3 uid="uid://hoxrqwb7ycjh"]

[ext_resource type="Theme" uid="uid://d1h3quxmhj8h8" path="res://assets/pause_menu_theme.tres" id="1_17btx"]
[ext_resource type="Script" path="res://Scenes/UI/pause_menu_screen.gd" id="1_uqrtq"]
[ext_resource type="FontFile" uid="uid://bsve0ogn0pegu" path="res://assets/fonts/dogicapixelbold.ttf" id="3_80a5w"]

[sub_resource type="Animation" id="Animation_nfrjs"]
resource_name = "pause_menu_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_acln5"]
_data = {
"pause_menu_on": SubResource("Animation_nfrjs")
}

[node name="PauseMenuScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uqrtq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 0.172549, 0.286275, 0.101961)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_17btx")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Resume"

[node name="ResetButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Reset"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/MainContainer"]
layout_mode = 2
text = "Quit"

[node name="QuitContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="QuitLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/QuitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_80a5w")
text = "¿Sure?"

[node name="Empty" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/QuitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_80a5w")
text = ". . ."
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/QuitContainer"]
layout_mode = 2
text = "No"

[node name="YesButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/QuitContainer"]
layout_mode = 2
text = "Yes"

[node name="ResetContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ResetContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_80a5w")
text = "¿Reset?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Empty" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ResetContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_80a5w")
text = ". . ."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetCheckpointButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ResetContainer"]
layout_mode = 2
text = "Checkpoint"

[node name="ResetLevelButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ResetContainer"]
layout_mode = 2
text = "Level"

[node name="Empty2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ResetContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_80a5w")
text = ". . ."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ResetContainer"]
layout_mode = 2
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_acln5")
}
autoplay = "pause_menu_on"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/MainContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/MainContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/MainContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/QuitContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/QuitContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/ResetContainer/ResetCheckpointButton" to="." method="_on_reset_checkpoint_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/ResetContainer/ResetLevelButton" to="." method="_on_reset_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/ResetContainer/BackButton" to="." method="_on_back_button_pressed"]
